# electric-meter

./: .gitignore  README.md  dataviz.py  electric-measures.db  fetch_daily_data.py  pyproject.toml  requirements.txt  table_creation.sql  update.sh
scripts/: update.sh
src/electric_meter/: config.py  dataviz.py  fetch_daily_data.py  serve.py
